JG-2004-01-27-1: Bugfix:    Fixed aimk LFLAGS for HP11.
                            Do not recommend use of --enable-posixmutexes for 
                            the build of Berkeley DB.
                            Do not use f(un)lockfile on DARWIN6 in flatfile 
                            spooling.
                 Review:    SG
                            

JG-2004-01-27-0: Bugfix:    Fixed aimk LFLAGS for HP1164.
                            Fixed a number of build problems for tru64.
                 Review:    EB

SG-2004-01-26-0: Enhancem.: Introcuded a "-t" option in qdel, qmod, qalter to
                            work on array taskes.
                 Changed.   qalter, qdel, qmod
                 Review:    DT

AD-2004-01-26-6: Bugfix:    Make sure, 'cl_com_cleanup_commlib()' is invoked
                            only once during sge_qmaster shutdown.
                 Changed:   qmaster, gdi
                 Review:    CR

AD-2004-01-26-5: Bugfix:    Did remove redundant 'sge_switch2admin_user()' and
                            'sge_switch2start_user()' calls.
                 Changed:   spool/classic
                 Review:    JG

AD-2004-01-26-4: Bugfix:    Did remove redundant 'sge_switch2admin_user()' and
                            'sge_switch2start_user()' calls.
                 Changed:   gdi
                 Review:    AA

JG-2004-01-26-1: Enhancem.: Make Berkeley DB spooling the default.
                 Bugfix:    Fixed spooling problem with the creation of queue
                            instances.
                 Bugfix:    Trash load values after reading exec hosts from the
                            spooling database.
                 Review:    AD

EB-2004-01-26-0: Enhancem.: Changed some man-pages concerning CQs

AD-2004-01-26-3: Bugfix:    'sge_do_log()' does no longer change the effective
                            UID before and after logging.
                 Changed:   uti

CR-2004-01-26-0: Bugfix:    Fixed build for ALINUX